[project]
name = "graphite-shim"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff==0.14.1",
    "mypy==1.18.2",
    "pytest==8.4.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "G",
    "I",
    "RUF",
    "SIM",
    "UP",
]

[tool.mypy]
strict = true
check_untyped_defs = true
pretty = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-ra",
    "--import-mode=importlib",
    "--durations=10",
]
xfail_strict = true
